Added ScrollGlue as dependancy.
This makes the chat window stick to the bottom when new messages are
added.

--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,8 @@
   "version": "0.0.0",
   "authors": [
     "Hjalti Leifsson <Hjaltileifsson@gmail.com>"
-  ]
+  ],
+  "dependencies": {
+    "angular-scroll-glue": "~2.0.3"
+  }
 }
