--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "Chat Application",
   "version": "0.0.0",
   "authors": [
-    "Hjalti Leifsson <Hjaltileifsson@gmail.com>"
+    "Hjalti Leifsson <Hjaltileifsson@gmail.com>",
+    "Árni Benedikt Árnason <arnibarnason@gmail.com>",
   ],
   "dependencies": {
     "angular-scroll-glue": "~2.0.3"
