--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,10 @@
     "Árni Benedikt Árnason <arnibarnason@gmail.com>"
   ],
   "dependencies": {
-    "angular-scroll-glue": "~2.0.3"
-  }
+    "angular-route": "~1.3.13",
+    "bootswatch-dist": "superhero",
+    "angular-bootstrap": "~0.12.0"
+  },
+  "homepage": "https://github.com/Homeblest/AngularJSChatProgram",
+  "license": "MIT"
 }
